# tools

./: .gitignore
std2metric/: Makefile  README.rst  pyproject.toml
std2metric/docs/: Makefile  conf.py  index.rst
std2metric/std2metric/: convert.py
