[tool.poetry]
name = "std2metric"
version = "0.1.0"
description = "Tools for converting standard/imperial measurements to metric and vice versa."
authors = ["Joseph Bane <jbane@acm.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
wheel = "^0.40.0"

[tool.poetry.dev-dependencies]
twine = "^4.0.2"
watchdog = "^2.3.1"
pytest = "^7.2.2"
coverage = "^7.2.2"
Sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
